--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/s-karmakar/Namaste-React#readme",
   "devDependencies": {
+    "constants-browserify": "^1.0.0",
     "parcel": "^2.13.3",
     "process": "^0.11.10"
   },
